.gradle/gradle.log
This mapping 'snapshot_20171003' was designed for MC 1.12! Use at your own peril.This mapping 'snapshot_20171003' was designed for MC 1.12! Use at your own peril.

:deobfCompileDummyTask
:deobfProvidedDummyTask
:sourceApiJava UP-TO-DATE
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavaC:\Users\deing\Desktop\Development\Minecraft\First_try\build\sources\main\java\org\civilization\items\ModItems.java:15: error: <K>register(K) has private access in GameRegistry
        GameRegistry.register(item);
                    ^
  where K is a type-variable:
    K extends IForgeRegistryEntry<K> declared in method <K>register(K)
C:\Users\deing\Desktop\Development\Minecraft\First_try\build\sources\main\java\org\civilization\proxy\ClientProxy.java:11: error: method does not override or implement a method from a supertype
    @Override
    ^
2 errors
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 2.208 secs
